Changed back bundle IDs and related namings to Cliqz Beta, overwritten after merging with Release branch

--- a/Client/Configuration/Debug.xcconfig
+++ b/Client/Configuration/Debug.xcconfig
@@ -4,9 +4,9 @@
 
 #include "BaseConfig.xcconfig"
 
-MOZ_BUNDLE_DISPLAY_NAME = CLIQZ
+MOZ_BUNDLE_DISPLAY_NAME = Cliqz Beta
 
-MOZ_PRODUCT_NAME = CLIQZ
+MOZ_PRODUCT_NAME = Cliqz Beta
 
 MOZ_RELEASE_CHANNEL = debug
 
@@ -14,4 +14,3 @@ INCLUDE_SETTINGS_BUNDLE = NO
 
 ADJUST_ENVIRONMENT =
 ADJUST_APP_TOKEN =
-
