--- a/Client/Configuration/BaseConfig.xcconfig
+++ b/Client/Configuration/BaseConfig.xcconfig
@@ -12,10 +12,10 @@ MOZ_BUNDLE_ID = com.$(MOZ_PRODUCT_NAME)
 MOZ_VERSION = 0.6.0
 
 // Build ID
-MOZ_BUILD_ID = 1029
+MOZ_BUILD_ID = 1030
 
 // Product Name
-MOZ_SOCORRO_PRODUCT_NAME = MOZ_SOCORRO_PRODUCT_NAME = Cliqz Beta
+MOZ_SOCORRO_PRODUCT_NAME = MOZ_SOCORRO_PRODUCT_NAME = CLIQZ
 
 // Crash-stats upload URL
 MOZ_BREAKPAD_URL =
