--- a/Client.xcodeproj/xcshareddata/xcschemes/Client.xcscheme
+++ b/Client.xcodeproj/xcshareddata/xcschemes/Client.xcscheme
@@ -250,7 +250,7 @@
    </AnalyzeAction>
    <ArchiveAction
       buildConfiguration = "Firefox"
-      customArchiveName = "CliqzBeta"
+      customArchiveName = "Cliqz"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
