[IB-366] Fixed todays widget after Firefox merge and resolved the conflicts between CLIQZ app and Firefox app

--- a/Client/Info.plist
+++ b/Client/Info.plist
@@ -43,11 +43,13 @@
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
 			<key>CFBundleURLName</key>
-			<string>org.mozilla.Client</string>
+			<string>org.cliqz.Client</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>firefox</string>
+				<string>cliqz</string>
 			</array>
 		</dict>
 	</array>
