--- a/Client/Configuration/Firefox.xcconfig
+++ b/Client/Configuration/Firefox.xcconfig
@@ -3,7 +3,7 @@
 // file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 // Mozilla Application ID
-MOZ_APP_ID = CliqzBeta
+MOZ_APP_ID = Cliqz
 
 MOZ_BUNDLE_DISPLAY_NAME = CLIQZ
 
