--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,9 @@
 osx_image: beta-xcode6.3
 language: objective-c
-rvm:
-    - 2.2
 env:
   - LC_CTYPE=en_US.UTF-8 LANG=en_US.UTF-8
 before_install:
+  - rvm osx-ssl-certs update all
   - gem install xcpretty -N
 script:
   - set -o pipefail
