--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
-osx_image: beta-xcode6.3
+osx_image: xcode8
 language: objective-c
 env:
   - LC_CTYPE=en_US.UTF-8 LANG=en_US.UTF-8
 before_install:
+  - gem update --system
   - rvm osx-ssl-certs update all
   - gem install xcpretty -N
 script:
