--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,10 @@ env:
 before_install:
   - gem update --system
   - gem install xcpretty -N
-
-script:
-  - set -o pipefail
   - brew update
   - brew upgrade xctool
   - brew upgrade carthage
   - ./bootstrap.sh
-  - rm -rf build
-  - xcodebuild -project Client.xcodeproj -scheme "Firefox" -sdk iphonesimulator -destination "platform=iOS Simulator,name=iPhone 6,OS=8.2" ONLY_ACTIVE_ARCH=NO -derivedDataPath build clean test | xcpretty -c
+
+script: xctool build -scheme Fennec -sdk iphonesimulator9.2 -arch "i386" ONLY_ACTIVE_ARCH=NO VALID_ARCHS="i386 x86_64"
+#script:xcodebuild -project Client.xcodeproj -scheme "Firefox" -sdk iphonesimulator -destination "platform=iOS Simulator,name=iPhone 6,OS=8.2" ONLY_ACTIVE_ARCH=NO -derivedDataPath build clean test | xcpretty -c
