--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ env:
   - LC_CTYPE=en_US.UTF-8 LANG=en_US.UTF-8
 
 before_install:
+  - set -o pipefail
   - gem update --system
   - gem install xcpretty -N
   - brew update
