--- a/.travis.yml
+++ b/.travis.yml
@@ -9,12 +9,11 @@ env:
   - LC_CTYPE=en_US.UTF-8 LANG=en_US.UTF-8
 
 before_install:
-  - set -o pipefail
   - gem update --system
   - gem install xcpretty -N
   - brew update
-  - brew upgrade xctool
-  - brew upgrade carthage
+  - brew upgrade xctool || true
+  - brew upgrade carthage || true
   - ./bootstrap.sh
 
 script: xctool build -scheme Fennec -sdk iphonesimulator9.2 -arch "i386" ONLY_ACTIVE_ARCH=NO VALID_ARCHS="i386 x86_64"
