Provided `NSPhotoLibraryUsageDescription` to prevent the app crash on iOS10

--- a/Client/Info.plist
+++ b/Client/Info.plist
@@ -138,5 +138,7 @@
 			<string></string>
 		</dict>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>CLIQZ will only use this access to download videos to your device.</string>
 </dict>
 </plist>
