--- a/Client/Info.plist
+++ b/Client/Info.plist
@@ -77,7 +77,7 @@
 	<string>CLIQZ will only use this access to download videos to your device.</string>
 	<key>NSUserActivityTypes</key>
 	<array>
-		<string>org.mozilla.ios.firefox.browsing</string>
+		<string>cliqz.ios.CliqzBeta.browsing</string>
 	</array>
 	<key>UIAppFonts</key>
 	<array>
