Test travis update for react-native

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,4 +16,4 @@ before_install:
   - brew upgrade carthage || true
   - ./bootstrap.sh
 
-script: xcodebuild -project Client.xcodeproj -scheme "Fennec" -sdk iphonesimulator -destination "platform=iOS Simulator,name=iPhone 6,OS=9.3" ONLY_ACTIVE_ARCH=NO -derivedDataPath build clean test | xcpretty -c
+script: xcodebuild -workspace Client.xcworkspace -scheme "Fennec" -sdk iphonesimulator -destination "platform=iOS Simulator,name=iPhone 6,OS=9.3" ONLY_ACTIVE_ARCH=NO -derivedDataPath build clean test | xcpretty -c
