--- a/Client/Info.plist
+++ b/Client/Info.plist
@@ -103,6 +103,8 @@
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
+		<string>fetch</string>
+		<string>remote-notification</string>
 	</array>
 	<key>UIFileSharingEnabled</key>
 	<false/>
