--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "homepage": "https://github.com/cliqz-oss/browser-ios#readme",
   "dependencies": {
-    "browser-core": "https://github.com/sammacbeth/browser-ios/releases/download/v8.0.1/jsengine-8.0.1.tgz",
+    "browser-core": "https://github.com/sammacbeth/browser-ios/releases/download/v8.0.2/jsengine.tgz",
     "pouchdb-adapter-react-native-sqlite": "1.0.3",
     "pouchdb-react-native": "6.1.26",
     "react": "16.0.0-alpha.12",
@@ -27,8 +27,8 @@
     "react-native-collapsible": "0.8.1",
     "react-native-device-info": "0.10.2",
     "react-native-fs": "2.3.3",
-    "react-native-sqlite-2": "git+https://git@github.com/cliqz-oss/react-native-sqlite-2.git#9eb74a2b7b22ed64690b12222a33635d1e3f2ca3",
-    "react-native-webrtc": "cliqz-oss/react-native-webrtc#f4473591ec47538e47960b11e3a3d4078052db0b",
+    "react-native-sqlite-2": "1.4.0",
+    "react-native-webrtc": "https://github.com/cliqz-oss/react-native-webrtc/releases/download/1.58.2/react-native-webrtc-1.58.1.tgz",
     "react-navigation": "1.0.0-beta.12",
     "url": "^0.11.0"
   }
