--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   "homepage": "https://github.com/cliqz-oss/browser-ios#readme",
   "dependencies": {
     "browser-core": "https://github.com/sammacbeth/browser-ios/releases/download/v8.0.4/browser-core-1.20.0.tgz",
+    "buffer": "5.0.7",
+    "https-browserify": "1.0.0",
+    "path-browserify": "0.0.0",
     "pouchdb-adapter-react-native-sqlite": "1.0.3",
     "pouchdb-react-native": "6.1.26",
     "react": "16.0.0-alpha.12",
@@ -30,6 +33,8 @@
     "react-native-sqlite-2": "1.4.0",
     "react-native-webrtc": "https://github.com/cliqz-oss/react-native-webrtc/releases/download/1.58.2/react-native-webrtc-1.58.1.tgz",
     "react-navigation": "1.0.0-beta.12",
+    "stream-browserify": "2.0.1",
+    "stream-http": "2.7.2",
     "url": "^0.11.0"
   }
 }
